--- a/public/style.css
+++ b/public/style.css
@@ -50,7 +50,16 @@ footer li {
 
 .img {
 	display: flex;
-	align-content: flex-start;
+	align-content: center;
+	justify-content: center;
+}
+
+.img > div {
+	align-self: center;
+	color: white;
+	font-family: sans-serif;
+	margin: 2.3% 5%;
+	flex-flow: column;
 }
 
 .img > img {
