--- a/views/owners/new.erb
+++ b/views/owners/new.erb
@@ -1,4 +1,4 @@
-<form action="">
+<form action="/volunteer/owner/index" method="POST">
 
 	<label for="name">Name:</label>
 	<input type="text" id="name" name="name">
@@ -15,5 +15,5 @@
 	</select>
 
 	<input type="submit" value="Add">
-	
+
 </form>
