--- a/views/animals/adopt.erb
+++ b/views/animals/adopt.erb
@@ -11,10 +11,10 @@
 	</select>
 	<select name="sort">
 		<option selected disbaled value="">Sort</option>
-		<option value="1">Type</option>
-		<option value="2">Name</option>
-		<option value="3">Trained</option>
-		<option value="4">Admission Date</option>
+		<option value="type">Type</option>
+		<option value="name">Name</option>
+		<option value="trained">Trained</option>
+		<option value="admission_date">Admission Date</option>
 	</select>
 	<input type="submit" value="Filter">
 </form>
