--- a/views/owners/waiting.erb
+++ b/views/owners/waiting.erb
@@ -1,6 +1,6 @@
 <h3>Join the Adoption Waiting List</h3>
 
-<form action="">
+<form action="/waiting" method="POST">
 
 	<label for="name">Name:</label>
 	<input type="text" id="name" name="name">
