Adds volunteer view point

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -26,6 +26,7 @@
 				<li><a href="/faq">FAQ</a></li>
 				<li><a href="/contact">Contact Us</a></li>
 				<li><a href="/donate">Donate</a></li>
+				<li><a href="/volunteer">Volunteer Login</a></li>
 			</ul>
 		</footer>
 </body>
