--- a/public/style.css
+++ b/public/style.css
@@ -33,11 +33,21 @@ a {
 	text-decoration: none;
 }
 
-footer {
+.parent {
+	position: relative;
+	min-width: 100%;
+	min-height: 100%;
+	padding: 0.5em;
+	margin: 0.5em;
+}
+
+#child {
+	position: relative;
+}
+
+#footer {
+	position:absolute;
 	display: flex;
-	position: fixed;
-	bottom: 0;
-	left: 0;
 	justify-content: center;
 	align-content: center;
 	width: 100%;
@@ -45,8 +55,10 @@ footer {
 	background-color: #E8A87C;
 }
 
-footer li {
+#footer > ul > li {
 	width: 33%;
+	margin: 0.5em;
+	padding: 0.5em;
 	display: flex;
 	justify-content: center;
 	align-self: center;
@@ -73,6 +85,8 @@ footer li {
 }
 
 .img {
+	margin: 0.5em;
+	padding: 0.5em;
 	display: flex;
 	align-content: center;
 	justify-content: center;
