--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,17 +17,20 @@
 			</ul>
 		</nav>
 
-			<main>
-				<%= yield %>
-			</main>
+		<main class="parent">
+			<%= yield %>
+		</main>
 
-		<footer>
-			<ul>
-				<li><a href="/faq">FAQ</a></li>
-				<li><a href="/contact">Contact Us</a></li>
-				<li><a href="/donate">Donate</a></li>
-				<li><a href="/volunteer">Volunteer Login</a></li>
-			</ul>
-		</footer>
+		<div id="child">
+			<footer id="footer">
+				<ul>
+					<li><a href="/faq">FAQ</a></li>
+					<li><a href="/contact">Contact Us</a></li>
+					<li><a href="/donate">Donate</a></li>
+					<li><a href="/volunteer">Volunteer Login</a></li>
+				</ul>
+			</footer>
+		</div>	
+
 </body>
 </html>
