--- a/views/animals/adopt.erb
+++ b/views/animals/adopt.erb
@@ -1,4 +1,4 @@
-<form action="/adopt" method="POST">
+<form action="/adopt/filtered" method="POST">
 	<select name="type">
 		<option selected disbaled value="">Type</option>
 		<option value="Dog">Dog</option>
