--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,7 +9,7 @@
 </head>
 <body>
 		<nav>
-			<ul>
+			<ul class="nav">
 				<li><a href="/">Home</a></li>
 				<li><a href="/about">About Us</a></li>
 				<li><a href="/adopt">Adopt</a></li>
@@ -23,14 +23,14 @@
 
 		<div id="child">
 			<footer id="footer">
-				<ul>
+				<ul class="nav">
 					<li><a href="/faq">FAQ</a></li>
 					<li><a href="/contact">Contact Us</a></li>
 					<li><a href="/donate">Donate</a></li>
 					<li><a href="/volunteer">Volunteer Login</a></li>
 				</ul>
 			</footer>
-		</div>	
+		</div>
 
 </body>
 </html>
