--- a/views/volunteer.erb
+++ b/views/volunteer.erb
@@ -9,7 +9,7 @@
 </head>
 <body>
 		<nav>
-			<ul>
+			<ul class="nav">
 				<li><a href="/">Home</a></li>
 				<li><a href="/volunteer/animal/index">Animals</a></li>
 				<li><a href="/volunteer/owner/index">Current Owners</a></li>
@@ -23,7 +23,7 @@
 
 		<div id="child">
 			<footer id="footer">
-				<ul>
+				<ul class="nav">
 					<li><a href="/faq">FAQ</a></li>
 					<li><a href="/contact">Contact Us</a></li>
 					<li><a href="/donate">Donate</a></li>
