--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ nav {
 	background-color: #E27D60;
 }
 
-ul {
+.nav {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
@@ -21,7 +21,7 @@ ul {
 	width: 100%;
 }
 
-nav li {
+.nav li {
 	width: 25%;
 	display: flex;
 	justify-content: center;
