--- a/views/donate.erb
+++ b/views/donate.erb
@@ -1,6 +1,6 @@
 <h3 class="header">Donate</h3>
 
-<form action="">
+<form action="/donate" method="POST">
 	<label for="donate">Amount:</label>
 	<input type="number" id="donate">
 
