--- a/views/animals/adopt.erb
+++ b/views/animals/adopt.erb
@@ -19,11 +19,18 @@
 	<input type="submit" value="Filter">
 </form>
 
-<% for pet in @pets %>
-	<br />
-	<p>Name: <%= pet.name%></p>
-	<p>Breed: <%= pet.breed%></p>
-	<p>Trained: <%= pet.trained%></p>
-	<p>Admission Date: <%= pet.admission_date%></p>
-	<br />
-<% end %>
+<div class="gallery">
+	<% for pet in @pets %>
+		<div class="individual">
+			<div class="petimg">
+
+			</div>
+			<br />
+			<p>Name: <%= pet.name%></p>
+			<p>Breed: <%= pet.breed%></p>
+			<p>Trained: <%= pet.trained%></p>
+			<p>Admission Date: <%= pet.admission_date%></p>
+			<br />
+		</div>
+	<% end %>
+</div>
