Adds css to contact view

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,8 +1,8 @@
 <h3 class="header">Contact Us</h3>
-
+<br />
 <p>Opening Times: 9am - 5pm</p>
 <p>Currently <%= @open_status %></p>
 <br />
-<p>Phone: 0141 112233 </p>
-<p>Email: animal.shelter@shelter.org</p>
-<p>Mail: 123 Animal Shelter, Glasgow, G2 3IT</p>
+<p> &#128241 Phone: 0141 112233 </p>
+<p>	&#128231 Email: animal.shelter@shelter.org</p>
+<p> &#128232 Mail: 123 Animal Shelter, Glasgow, G2 3IT</p>
