Changes volunter/owner/index to be those with pets only, changes waiting list link to be those on the waiting list only

--- a/views/volunteer.erb
+++ b/views/volunteer.erb
@@ -13,7 +13,7 @@
 				<li><a href="/">Home</a></li>
 				<li><a href="/volunteer/animal/index">Animals</a></li>
 				<li><a href="/volunteer/owner/index">Current Owners</a></li>
-				<li><a href="/volunteer/owner/index">Waiting List</a></li>
+				<li><a href="/volunteer/owner/index/filter">Waiting List</a></li>
 			</ul>
 		</nav>
 
