Fixes adoption table and creates default value for non date values, and fixes adoption class by taking away if statements in initialize

--- a/views/volunteers/animals/adoption.erb
+++ b/views/volunteers/animals/adoption.erb
@@ -4,13 +4,14 @@
 
 <h5><%= @pet.name %></h5>
 
-<p>Initial Interview: </p>
-<p>Initial Interview Date: </p>
-<p>Meet And Greet:</p>
-<p>Meet And Greet Date: </p>
-<p>Home Visit:</p>
-<p>Home Visit Date: </p>
-<p>Vet Check: </p>
-<p>Vet Check Date: </p>
-<p>Take Home: </p>
-<p>Take Home Date: </p>
+
+<p>Initial Interview: <%= @adopt.initial_interview %> </p>
+<p>Initial Interview Date: <%= @adopt.initial_interview_date %> </p>
+<p>Meet And Greet: <%= @adopt.meet_greet %> </p>
+<p>Meet And Greet Date: <%= @adopt.meet_greet_date %> </p>
+<p>Home Visit: <%= @adopt.home_visit %> </p>
+<p>Home Visit Date: <%= @adopt.home_visit_date %> </p>
+<p>Vet Check: <%= @adopt.vet_check %> </p>
+<p>Vet Check Date: <%= @adopt.vet_check_date %> </p>
+<p>Take Home: <%= @adopt.take_home %> </p>
+<p>Take Home Date: <%= @adopt.take_home_date %> </p>
