--- a/views/volunteers/animals/index.erb
+++ b/views/volunteers/animals/index.erb
@@ -14,7 +14,7 @@
 				<td id="hidetable"><form action="/volunteer/animal/<%= pet.animal_id %>/edit" method="GET">
 					<input type="submit" value="Edit Pet">
 				</form></td>
-				<td><form action="/volunteer/animal/<%= pet.animal_id %>/edit/adoption" method="GET">
+				<td><form action="/volunteer/animal/<%= pet.animal_id %>/edit/adoption" method="POST">
 					<input type="submit" value="Start Adoption Process">
 				</form></td>
 				<td><form action="/volunteer/animal/<%= pet.animal_id %>/edit/training" method="GET">
