--- a/views/volunteers/animals/index.erb
+++ b/views/volunteers/animals/index.erb
@@ -17,6 +17,9 @@
 				<td><form action="/volunteer/animal/<%= pet.animal_id %>/edit/adoption" method="POST">
 					<input type="submit" value="Start Adoption Process">
 				</form></td>
+				<td><form action="/volunteer/animal/<%= pet.animal_id %>/edit/adoption" method="GET">
+					<input type="submit" value="Update Adoption Process">
+				</form></td>
 				<td><form action="/volunteer/animal/<%= pet.animal_id %>/edit/training" method="GET">
 					<input type="submit" value="Update Training Program">
 				</form></td>
