--- a/public/style.css
+++ b/public/style.css
@@ -146,3 +146,161 @@ a {
   margin: 2.3% 5%;
   border: 3px solid #085DCB;
 }
+
+.adoptionParent {
+display: grid;
+grid-template-columns: repeat(10, 1fr);
+grid-template-rows: repeat(3, 1fr);
+grid-column-gap: 0px;
+grid-row-gap: 0px;
+}
+
+.adoption1 {
+	grid-column: 1;
+	grid-row: 1;
+}
+
+.adoption2 {
+	grid-column: 1;
+	grid-row: 2;
+}
+
+.adoption3 {
+	grid-column: 1;
+	grid-row: 3;
+}
+
+.adoption4 {
+	grid-column: 2;
+	grid-row: 1;
+}
+
+.adoption5 {
+	grid-column: 2;
+	grid-row: 2;
+}
+
+.adoption6 {
+	grid-column: 2;
+	grid-row: 3;
+}
+
+.adoption7 {
+	grid-column: 3;
+	grid-row: 1;
+}
+
+.adoption8 {
+	grid-column: 3;
+	grid-row: 2;
+}
+
+.adoption9 {
+	grid-column: 3;
+	grid-row: 3;
+}
+
+.adoption10 {
+	grid-column: 4;
+	grid-row: 1;
+}
+
+.adoption11 {
+	grid-column: 4;
+	grid-row: 2;
+}
+
+.adoption12 {
+	grid-column: 4;
+	grid-row: 3;
+}
+
+.adoption13 {
+	grid-column: 5;
+	grid-row: 1;
+}
+
+.adoption14 {
+	grid-column: 5;
+	grid-row: 2;
+}
+
+.adoption15 {
+	grid-column: 5;
+	grid-row: 3;
+}
+
+.adoption16 {
+	grid-column: 6;
+	grid-row: 1;
+}
+
+.adoption17 {
+	grid-column: 6;
+	grid-row: 2;
+}
+
+.adoption18 {
+	grid-column: 6;
+	grid-row: 3;
+}
+
+.adoption19 {
+	grid-column: 7;
+	grid-row: 1;
+}
+
+.adoption20 {
+	grid-column: 7;
+	grid-row: 2;
+}
+
+.adoption21 {
+	grid-column: 7;
+	grid-row: 3;
+}
+
+.adoption22 {
+	grid-column: 8;
+	grid-row: 1;
+}
+
+.adoption23 {
+	grid-column: 8;
+	grid-row: 2;
+}
+
+.adoption24 {
+	grid-column: 8;
+	grid-row: 3;
+}
+
+.adoption25 {
+	grid-column: 9;
+	grid-row: 1;
+}
+
+.adoption26 {
+	grid-column: 9;
+	grid-row: 2;
+}
+
+.adoption27 {
+	grid-column: 9;
+	grid-row: 3;
+}
+
+.adoption28 {
+	grid-column: 10;
+	grid-row: 1;
+}
+
+.adoption29 {
+	grid-column: 10;
+	grid-row: 2;
+}
+
+.adoption30 {
+	grid-column: 10;
+	grid-row: 3;
+}
