--- a/views/public/animals/adopt.erb
+++ b/views/public/animals/adopt.erb
@@ -4,6 +4,11 @@
 		<option value="Dog">Dog</option>
 		<option value="Cat">Cat</option>
 	</select>
+	<select name="breed">
+		<option selected disbaled value="">Breed</option>
+		<option value="border_collie">Border Collie</option>
+		<option value="husky">Husky</option>
+	</select>
 	<select name="trained">
 		<option selected disbaled value="">Trained</option>
 		<option value="yes">Yes</option>
