--- a/views/home.erb
+++ b/views/home.erb
@@ -1,6 +1,8 @@
 <div class="img">
-	<img src="images/shadow1.jpg" alt="Puppy Standing on Beach">
-	<div>
+	<div id="homeimg">
+		<img src="images/shadow1.jpg" alt="Puppy Standing on Beach" width="500" height="500">
+	</div>
+	<div class="para">
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras accumsan aliquet tempor. Aliquam lobortis, magna laoreet laoreet sagittis, sapien nibh convallis elit, vitae tempus magna nibh id tortor. Pellentesque ullamcorper nisi ut sapien molestie rutrum. Morbi orci nulla, maximus nec consectetur non, volutpat id ante. Vivamus in fermentum neque. Etiam eget mauris in tellus sollicitudin consequat. Proin posuere odio eget mauris rhoncus egestas. Sed venenatis nisl laoreet, pellentesque nunc eu, dignissim sapien.
 		</p>
