--- a/views/volunteers/animals/new.erb
+++ b/views/volunteers/animals/new.erb
@@ -4,12 +4,22 @@
 	<label for="animal-name">Name:</label>
 	<input type="text" id="animal-name" name="name">
 
-	<label for="animal-breed">Breed:</label>
-	<select name="breed" id="animal-breed">
+	<label for="animal-type">Type:</label>
+	<select name="type" id="animal-breed">
 		<option selected disabled value=""></option>
 		<option value="Dog">Dog</option>
 		<option value="Cat">Cat</option>
 	</select>
+
+	<label for="animal-breed">Breed:</label>
+	<select name="breed" id="animal-breed">
+		<option selected disabled value=""></option>
+		<option value="border_collie">Border Collie</option>
+		<option value="husky">Husky</option>
+	</select>
+
+	<label for="animal-microchip">Microchip Number:</label>
+	<input type="number" id="animal-microchip" name="microchip">
 
 	<label for="trained">Adoptable:</label>
 	<label for="Yes">Yes</label>
@@ -19,6 +29,9 @@
 
 	<label for="date">Admission Date:</label>
 	<input type="date" id="date" name="admission_date">
+
+	<label for="img">Pet Image:</label>
+	<input type="text" id="img" name="img_url">
 
 	<label for="owner">Owner:</label>
 	<input type="number" id="owner" name="owner_id">
