--- a/public/style.css
+++ b/public/style.css
@@ -95,7 +95,7 @@ a {
 	margin-top: 100px;
 	width: 250px;
 	height: 250px;
-	background-color: black;
+	border: 1px solid #008080;
 }
 
 .individual p {
