Adds ability to edit owner on owner list and waiting list view

--- a/views/volunteers/owners/index.erb
+++ b/views/volunteers/owners/index.erb
@@ -15,4 +15,7 @@
 	<% end %>
 
 	</table>
+	<form action="/volunteer/owner/<%=owner.owner_id%>/edit" method="GET">
+		<input type="submit" value="Edit">
+	</form>
 <% end %>
