Changes training table from bools to varchar and changes edit training view

--- a/views/volunteers/animals/training.erb
+++ b/views/volunteers/animals/training.erb
@@ -31,50 +31,57 @@
 	<label for="toilet">Toilet Trained:</label>
 	<select id="toilet" name="train__toilet_trained">
 		<option selected disbaled value=""></option>
-		<option value="yes">Yes</option>
-		<option value="no">No</option>
+		<option value="Basic">Basic</option>
+		<option value="Intermediate">Intermediate</option>
+		<option value="Advance">Advance</option>
 	</select>
 	<br />
 	<label for="sit">Sit:</label>
 	<select id="sit" name="train__sit">
 		<option selected disbaled value=""></option>
-		<option value="yes">Yes</option>
-		<option value="no">No</option>
+		<option value="Basic">Basic</option>
+		<option value="Intermediate">Intermediate</option>
+		<option value="Advance">Advance</option>
 	</select>
 	<br />
 	<label for="stay">Stay:</label>
 	<select id="stay" name="train__stay">
 		<option selected disbaled value=""></option>
-		<option value="yes">Yes</option>
-		<option value="no">No</option>
+		<option value="Basic">Basic</option>
+		<option value="Intermediate">Intermediate</option>
+		<option value="Advance">Advance</option>
 	</select>
 	<br />
 	<label for="come">Come:</label>
 	<select id="come" name="train__come">
 		<option selected disbaled value=""></option>
-		<option value="yes">Yes</option>
-		<option value="no">No</option>
+		<option value="Basic">Basic</option>
+		<option value="Intermediate">Intermediate</option>
+		<option value="Advance">Advance</option>
 	</select>
 	<br />
 	<label for="heel">Heel:</label>
 	<select id="heel" name="train__heel">
 		<option selected disbaled value=""></option>
-		<option value="yes">Yes</option>
-		<option value="no">No</option>
+		<option value="Basic">Basic</option>
+		<option value="Intermediate">Intermediate</option>
+		<option value="Advance">Advance</option>
 	</select>
 	<br />
 	<label for="down">Down:</label>
 	<select id="down" name="train__down">
 		<option selected disbaled value=""></option>
-		<option value="yes">Yes</option>
-		<option value="no">No</option>
+		<option value="Basic">Basic</option>
+		<option value="Intermediate">Intermediate</option>
+		<option value="Advance">Advance</option>
 	</select>
 	<br />
 	<label for="socialised">Socialised:</label>
 	<select id="socialised" name="train__socialised">
 		<option selected disbaled value=""></option>
-		<option value="yes">Yes</option>
-		<option value="no">No</option>
+		<option value="Basic">Basic</option>
+		<option value="Intermediate">Intermediate</option>
+		<option value="Advance">Advance</option>
 	</select>
 	<br />
 	<input type="submit" value="Update">
