--- a/views/volunteers/animals/index.erb
+++ b/views/volunteers/animals/index.erb
@@ -28,4 +28,7 @@
 		<% end %>
 
 	</table>
+	<form action="/volunteer/animal/new" method="GET">
+		<input type="submit" value="Add New Animal">
+	</form>
 </div>
