--- a/views/volunteers/owners/indexf.erb
+++ b/views/volunteers/owners/indexf.erb
@@ -8,3 +8,8 @@
 		<input type="submit" value="Edit">
 	</form>
 <% end %>
+<br />
+<br />
+<form action="/volunteer/owner/new" method="GET">
+	<input type="submit" value="Add New Customer">
+</form>
